--- a/src/textBox/TextBox.css
+++ b/src/textBox/TextBox.css
@@ -4,3 +4,9 @@
     border: 1px solid black;
     border-radius: 50px;
 }
+
+.btn {
+    background-color: white;
+    border-radius: 5px;
+    padding: 5px;
+}
