karthi 4th commit

--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,6 @@
     margin: 0px;
     padding: 0px;
     font-family: 'Poppins', sans-serif;
+    color: #64CCC5;
+    background-color: #001C30;
 }
