--- a/src/Task/TaskList/TaskList.css
+++ b/src/Task/TaskList/TaskList.css
@@ -1,20 +1,68 @@
 .taskList {
     margin: 1rem;
-    border: 1px solid black;
+    border: 2px solid #64CCC5;
+    border-radius: 20px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 20px;
+    box-shadow: 0 0 10px #64CCC5;
+
+}
+.t-right{
+    display: flex;
+    align-items: center;
+    justify-content:center;
 }
 
 .t-name {
     font-weight: bold;
     font-size: 25px;
     justify-self: center;
+    
 }
-
+.t-date,.t-status{
+    color: #DAFFFB;
+    font-size: small ;
+}
+.btndelete{
+ border: 0px;
+ margin-left: 1rem;
+ 
+}
+input[type="checkbox"] {
+    
+    -webkit-appearance: none;
+    font: inherit;
+    color: currentColor;
+    width: 1.5em;
+    height: 1.5em;
+    border: 0.15em solid currentColor;
+    border-radius: 0.15em;
+    transform: translateY(-0.075em);
+  
+    display: grid;
+    place-content: center;
+  }
+  
+  input[type="checkbox"]::before {
+    content: "";
+    width: 0.65em;
+    height: 0.65em;
+    clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+    transform: scale(0);
+    transform-origin: bottom left;
+    transition: 120ms transform ease-in-out;
+    box-shadow: inset 1em 1em #64CCC5;
+    /* Windows High Contrast Mode */
+    background-color: CanvasText;
+  }
+  
+  input[type="checkbox"]:checked::before {
+    transform: scale(1);
+  }
 .deletebtn {
     width: 30px;
     height: 30px;
-    color: green;
+    
 }
