--- a/src/App.css
+++ b/src/App.css
@@ -11,9 +11,9 @@
 .name {
     margin-bottom: 1rem;
 }
-@media only screen and (max-width: 600px) {
+/* @media only screen and (max-width: 480px) {
     .wrapper {
-    float: none;
     width: 100%;
+    
     }
-    }
+    } */
