--- a/src/Task/Task.css
+++ b/src/Task/Task.css
@@ -2,3 +2,9 @@
     width: 400px;
     margin: 21px 10px;
 }
+
+@media only screen and (max-width: 480px) {
+    .task-container {
+        width: 360px;
+    }
+    }
